[package]
name = "slackwesend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.12.0"
shuttle-runtime = "0.15.0"
rocket = "0.5.0-rc.3"
shuttle-rocket = "0.15.0"
tokio = "1.28.0"

