[package]
name = "slackwesend"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named `webp` that does not enable any other features.
lambda = []

[dependencies]
tide = "0.16"
async-std = "1.12.0"
shuttle-runtime = "0.15.0"
rocket = { version ="0.5.0-rc.3", features = ["json"]}
shuttle-rocket = "0.15.0"
tokio = "1.28.0"
tracing = "0.1.37"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
regex = "1.8.1"
tinytemplate = "1.2.1"
rand = "0.8.5"

