[package]
name = "wkw"
version = "0.1.0"
edition = "2021"
publish = false
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# build lambda artifacts (needs docker)
lambda = []

# build lambda artifacts from a clean docker state
no-cache = []

# deploy after build
deploy = []

[dependencies]
tide = "0.16"
async-std = "1.12.0"
lambda-web = { version = "0.2.1", features = ["rocket05"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
tokio = "1.28.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
regex = "1.8.1"
tinytemplate = "1.2.1"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# for the iac binary
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.23.0"
aws-sdk-iam = "1.23.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["serde_derive"] }
serde_json = "1.0.116"
async-trait = "0.1.80"
heck = "0.5.0"
futures = "0.3.30"

[dev-dependencies]
rusoto_core = "0.48.0"
rusoto_lambda = "0.48.0"
